--- a/sdk/lib/CMakeLists.txt
+++ b/sdk/lib/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 
 add_subdirectory(ioevent)
 add_subdirectory(lsalib)
+add_subdirectory(minixml)
 add_subdirectory(nt)
 add_subdirectory(ppcmmu)
 add_subdirectory(pseh)
