Link rtl against minixml

--- a/sdk/lib/rtl/CMakeLists.txt
+++ b/sdk/lib/rtl/CMakeLists.txt
@@ -114,3 +114,4 @@ add_asm_files(rtl_asm ${ASM_SOURCE})
 add_library(rtl ${SOURCE} ${rtl_asm})
 add_pch(rtl rtl.h SOURCE)
 add_dependencies(rtl psdk asm)
+target_link_libraries(rtl PRIVATE minixml)
