Move minixml into rtl
This library is going to be modified to be
RTL-compatible, which also makes it RTL-specific.

--- a/sdk/lib/rtl/CMakeLists.txt
+++ b/sdk/lib/rtl/CMakeLists.txt
@@ -68,6 +68,8 @@ list(APPEND SOURCE
     version.c
     wait.c
     workitem.c
+    minixml/xml.c
+    minixml/xml.h
     rtl.h)
 
 if(ARCH STREQUAL "i386")
