--- a/dll/3rdparty/CMakeLists.txt
+++ b/dll/3rdparty/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_subdirectory(dxtn)
+add_subdirectory(libcxx_ros)
 add_subdirectory(libjpeg)
 add_subdirectory(libpng)
 add_subdirectory(libtiff)
