Add compobj_surrogate.c to ole32 project

--- a/dll/win32/ole32/CMakeLists.txt
+++ b/dll/win32/ole32/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND SOURCE
     clipboard.c
     comcat.c
     compobj.c
+    compobj_surrogate.c
     compositemoniker.c
     datacache.c
     defaulthandler.c
