Add DllSurrogate rostest

--- a/modules/rostests/apitests/com/CMakeLists.txt
+++ b/modules/rostests/apitests/com/CMakeLists.txt
@@ -13,6 +13,7 @@ list(APPEND SOURCE
     ole32.c
     shdocvw.c
     shell32.c
+    surrogate.c
     zipfldr.c)
 
 list(APPEND PCH_SKIP_SOURCE
@@ -22,8 +23,11 @@ add_executable(com_apitest
     ${SOURCE}
     ${PCH_SKIP_SOURCE})
 
+add_idl_headers(com_apitest_library_idl com_library/comtest.idl)
+
 target_link_libraries(com_apitest wine uuid)
 set_module_type(com_apitest win32cui)
+add_dependencies(com_apitest com_apitest_library_idl)
 add_importlibs(com_apitest advapi32 ole32 shlwapi shell32 msvcrt kernel32 ntdll)
 add_pch(com_apitest com_apitest.h "${PCH_SKIP_SOURCE}")
 add_rostests_file(TARGET com_apitest)
