Add consoleuser.c to usrmgr.cpl
This page allows a user to change their own
password. If the user is an administrator, the
Users and Groups pages will be shown in tabs.
If not, this is the only page available.

--- a/dll/cpl/usrmgr/lang/en-US.rc
+++ b/dll/cpl/usrmgr/lang/en-US.rc
@@ -161,6 +161,31 @@ BEGIN
     PUSHBUTTON "Cancel", IDCANCEL, 195, 197, 50, 14
 END
 
+IDD_CONSOLE_USER DIALOGEX 0, 0, 252, 223
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_DISABLED | WS_CAPTION
+CAPTION "General"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    LTEXT           "User Name (domain\\user)", IDC_CONSOLE_NAME_DIALOG_CAPTION, 7, 7, 200, 10
+    LTEXT           "(Account Type)", IDC_CONSOLE_NAME_DIALOG_DESCRIPTION_LABEL, 7, 21, 200, 10
+    PUSHBUTTON      "Change Password...", IDC_CONSOLE_USER_CHANGE_BUTTON, 173, 28, 72, 14
+END
+
+IDD_CONSOLE_USER_CHANGEPASSWORD DIALOGEX 0, 0, 267, 81
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU | DS_SHELLFONT
+CAPTION "Change Password"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    RTEXT "Current Password:", -1, 7, 9, 86, 8
+    EDITTEXT IDC_EDIT_OLDPASSWORD, 107, 7, 153, 14, ES_AUTOHSCROLL | ES_PASSWORD
+    RTEXT "New Password:", -1, 7, 27, 86, 8
+    EDITTEXT IDC_EDIT_PASSWORD1, 107, 25, 153, 14, ES_AUTOHSCROLL | ES_PASSWORD
+    RTEXT "Repeat Password:", -1, 7, 45, 86, 8
+    EDITTEXT IDC_EDIT_PASSWORD2, 107, 43, 153, 14, ES_AUTOHSCROLL | ES_PASSWORD
+    DEFPUSHBUTTON "OK", IDOK, 156, 60, 50, 14
+    PUSHBUTTON "Cancel", IDCANCEL, 210, 60, 50, 14
+END
+
 /* Menus */
 
 IDM_POPUP_GROUP MENU
@@ -210,4 +235,11 @@ BEGIN
     IDS_NAME "Name"
     IDS_FULLNAME "Full Name"
     IDS_DESCRIPTION "Description"
+END
+
+STRINGTABLE
+BEGIN
+    IDS_COULD_NOT_GET_USERNAME_ERROR_MSG "Could not get the name of the current user."
+    IDS_LOCAL_ADMINISTRATOR_DESCRIPTION "Administrator"
+    IDS_LOCAL_REGULARUSER_DESCRIPTION "Limited User"
 END
